--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700&family=Roboto:wght@100;300;400;500;700&display=swap');
+
 /*--General--*/
 
 * {
     margin: 0;
     padding: 0;
 }
+
+body {
+    font-family: Lato, sans-serif;
+    font-weight: 300;
+}
+
