--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,5 +10,50 @@
 body {
     font-family: Lato, sans-serif;
     font-weight: 300;
+    background-color: #FDEBE4;
 }
 
+
+.uppercase {
+    text-transform: uppercase;
+}
+
+.general-sub {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
+    color: #3066be;
+    padding-bottom: 10px;
+}
+
+.inline-block {
+    display: inline-block;
+}
+
+
+/*--Colours--*/
+
+.bg-light-blue {
+    background-color: #d1e3fa;
+}
+
+
+.hvr-border-fade::before {
+    color: #3066be;
+}
+
+
+/*--Navigation--*/
+
+.navbar-light .navbar-nav .nav-link {
+    font-family: 'Lato', sans-serif;
+    font-size: 1.1rem;
+    font-weight: normal;
+    color: #3066be;
+}
+
+.navbar-brand {
+	font-family: 'Lato', sans-serif;
+	font-weight: 500;
+    letter-spacing: 2px;
+    color: #3066be;
+}
