--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,33 +59,20 @@ body {
 .row div {
     padding: 0;
 }
-/* Container holding the image and the text */
+
 .container {
     position: relative;
-  }
-  
-  /* Bottom right text */
-.text-block {
-    position: absolute;
-    bottom: 20px;
-    right: 20px;
-    background-color: black;
-    color: white;
-    padding-left: 20px;
-    padding-right: 20px;
-}/* Container holding the image and the text */
-
-.container {
-  position: relative;
+    margin: 0 auto; /* Center it */
+    max-width: 600px;
 }
-
-/* Bottom right text */
-.text-block {
-  position: absolute;
-  bottom: 20px;
-  right: 20px;
-  background-color: black;
-  color: white;
-  padding-left: 20px;
-  padding-right: 20px;
+  
+  .container .content {
+    position: absolute; /* Position the background text */
+    bottom: 0; /* At the bottom. Use top:0 to append it to the top */
+    background: rgb(0, 0, 0); /* Fallback color */
+    background: rgba(0, 0, 0, 0.5); /* Black background with 0.5 opacity */
+    color: #f1f1f1; /* Grey text */
+    width: 100%; /* Full width */
+    padding: 20px; /* Some padding */
+    text-align: center;
 }
