--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -125,3 +125,42 @@ footer {
 .copyright {
     font-size: 10px;
 }
+
+
+/*--Contact  Copied from resume-miniproject-bootstrap4 - Code Institute - modified--*/
+
+
+.contact-heading {
+    text-align: center;
+    font-family: 'Lato', sans-serif;
+    font-weight: bold;
+    color:  #3066be;
+    padding-top: 30px;
+}
+
+.center-form {
+    padding-top: 20px;
+    margin: 0 auto;
+    max-width: 75%;
+}
+
+button[type="submit"] {
+    margin-top: 20px;
+    margin-bottom: 10px;
+    color: #3066be;
+    background-color: #d1e3fa;
+}
+
+label{
+  display: inline-block;
+  margin: 5px  5px;
+  font-size: 16px;
+  font-family: "Roboto", sans-serif;
+  color: #3066be;
+}
+
+form {
+    max-width:768px;
+    width:100%;
+    margin: 10px auto;
+}
