--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,7 +21,7 @@ body {
 }
 
 .general-sub {
-    font-family: 'Lato', sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-weight: 300;
     color: #3066be;
     padding-bottom: 10px;
@@ -71,7 +71,7 @@ body {
     max-width: 600px;
 }
   
-  .container .content {
+.container .content {
     position: absolute; /* Position the background text */
     bottom: 0; /* At the bottom. Use top:0 to append it to the top */
     background: rgb(0, 0, 0); /* Fallback color */
@@ -82,6 +82,27 @@ body {
     text-align: center;
 }
 
+/*--HAbout Us --*/
+
+#about h1 {
+    font-family: 'Lato', sans-serif;
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: strong;
+    color:  #3066be;
+    padding-top: 25px;
+    padding-bottom: 15px;
+    letter-spacing: 2px;
+}
+
+#about-content {
+    font-family: 'Roboto', sans-serif;
+    text-align: justify;
+    font-style: italic;
+    font-size: 1.2rem;
+    color: #3066be;
+    padding: 0 35px;
+}
 
 /*--Footer Copied from resume-miniproject-bootstrap4 - Code Institute - modified--*/
 
