Add description and images for galery page futures to readme

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,8 +11,7 @@ body {
     padding-top: 55px;
     font-family: Lato, sans-serif;
     font-weight: 300;
-    background: #FDEBE4;
-;
+    background-color: #FDEBE4;
 }
 
 
@@ -72,17 +71,17 @@ body {
 }
   
 .container .content {
-    position: absolute; /* Position the background text */
-    bottom: 0; /* At the bottom. Use top:0 to append it to the top */
-    background: rgb(0, 0, 0); /* Fallback color */
-    background: rgba(0, 0, 0, 0.5); /* Black background with 0.5 opacity */
-    color: #f1f1f1; /* Grey text */
-    width: 100%; /* Full width */
-    padding: 20px; /* Some padding */
+    position: absolute; 
+    bottom: 0; 
+    background: rgb(0, 0, 0); 
+    background: rgba(0, 0, 0, 0.5); 
+    color: #f1f1f1;
+    width: 100%; 
+    padding: 20px; 
     text-align: center;
 }
 
-/*--HAbout Us --*/
+/*--About Us --*/
 
 #about h1 {
     font-family: 'Lato', sans-serif;
