--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -87,7 +87,7 @@ body {
     font-family: 'Lato', sans-serif;
     text-align: center;
     text-transform: uppercase;
-    font-weight: strong;
+    font-weight: bold;
     color:  #3066be;
     padding-top: 25px;
     padding-bottom: 15px;
